--- a/styles1.css
+++ b/styles1.css
@@ -12,4 +12,10 @@ body {
     align-items: center;
     justify-content: start;
     gap: 5em;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+
+a {
+    color: white;
+    text-decoration: none;
 }
