--- a/styles1.css
+++ b/styles1.css
@@ -25,7 +25,7 @@ a {
 .picture {
     display: flex;
     background-color: rgb(108, 108, 128);
-    height: 60%;
+    height: 70%;
     justify-content: center;
     gap: 50px;
     align-items: center;
@@ -37,6 +37,10 @@ a {
     width: 70%;
     height: 100%;
     border-radius: 10px;
+}
+
+.pic_img img {
+    width: 100%;
 }
 
 .arrow {
@@ -68,6 +72,8 @@ a {
     border-left-color: black;
     margin-left: 13px;
 }
+
+
 
 
 
