--- a/styles1.css
+++ b/styles1.css
@@ -2,11 +2,12 @@
 body {
     margin: 0px;
     padding: 0px;
-    background-color: black;
+    background-color: white;
 }
 
 
 .top-sec {
+    background-color: black;
     height: 100px;
     list-style-type: none;
     display: flex;
@@ -19,15 +20,22 @@ body {
 a {
     color: white;
     text-decoration: none;
+    transition: 0.5s ease;
+}
+
+a:hover {
+    color: rgb(99, 76, 201);
 }
 
 /*pic*/
 .picture {
     display: flex;
     background-color: rgb(108, 108, 128);
-    height: 70%;
+    height: 80%;
     justify-content: center;
     align-items: center;
+    margin-top: -20px;
+    gap: 22%;
 }
 
 .pic_img {
@@ -42,7 +50,7 @@ a {
     width: 75%;
     justify-content: center;
     animation: blur;
-    animation-duration: 0.5s;
+    animation-duration: 1s;
     border-radius: 10px;
 }
 
@@ -51,23 +59,30 @@ a {
     to {opacity: 1;}
 }
 
-.arrow {
+.arrowBase {
     justify-content: center;
     align-items: center;
     display: flex;
-    background-color: white;
-    height: 10%;
+    height: 15%;
     width: 3.2%;
-    border-radius:50%;
-    box-shadow: black 0 0 5px;
-    transition: transform 0.1s ease;
+    transition: all 0.5s ease;
 }
 
-.arrow:hover {
-    transform: scale(1.1);
+.arrowBase:hover{
+    background-color: purple;
 }
 
-.arrow .shape {
+.btnLeft {
+    border-top-right-radius: 10%;
+    border-bottom-right-radius: 10%;
+}
+
+.btnRight {
+    border-top-left-radius: 10%;
+    border-bottom-left-radius: 10%;
+}
+
+.arrowBase .shape {
     border: 5px solid;
     border-color: transparent;
     border-width: 10px;
