--- a/styles1.css
+++ b/styles1.css
@@ -41,13 +41,22 @@ a:hover {
 .pic_img {
     display: flex;
     justify-content: center;
+    align-items: center;
+    position: relative;
+    overflow: hidden;
     width: 50%;
-    height: 100%;
-    border-radius: 10px;
+    height: 100%;       
+}
+
+.dots {
+    background-color: blue;
+    position: absolute;
+    top: 95%;
 }
 
 .img-seb {
     width: 75%;
+    height: 100%;
     justify-content: center;
     animation: blur;
     animation-duration: 1s;
@@ -65,11 +74,11 @@ a:hover {
     display: flex;
     height: 15%;
     width: 3.2%;
-    transition: all 0.5s ease;
+    transition: all 0.1s ease;
 }
 
 .arrowBase:hover{
-    background-color: purple;
+    background-color: rgb(116, 71, 116);
 }
 
 .btnLeft {
@@ -100,6 +109,7 @@ a:hover {
     border-left-color: black;
     margin-left: 13px;
 }
+
 
 
 
